# Gem

./: README.md
Gem_Demo2/FactChecker/: FLOW_DIAGRAMS.md  PROJECT_OVERVIEW.md  WEB_INTERFACE_README.md  app.py  debug_sources.html  readme.md  setup_and_run.sh  simple_server.py  test_server.py
Gem_Demo2/FactChecker/chrome_extension/: README.md  background.js  contentScript.js  manifest.json  options.html  options.js  popup.html  popup.js  sidepanel.html  sidepanel.js
Gem_Demo2/FactChecker/factCheckMCP/: __init__.py  api.py  gemini_client.py  main.py  mcp_server.py  pyproject.toml  requirements.txt  settings.py
